--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -118,7 +118,7 @@ h2:after {
     display: inline-block;
     width: 30px;
     text-align: center;
-    color: #e67e22 ;
+    color: #e67e22;
     font-size: 120%;
     margin-right: 10px;
 
@@ -133,6 +133,13 @@ h2:after {
 .section-features .long-copy {
     margin-bottom: 30px;
 }
+
+/* Button Links */
+/* .linkbutton {
+    padding: 50px;
+    align-items: center;
+    color: #007bb6;
+} */
 
 
 /* LINKS */
@@ -153,11 +160,6 @@ a:active {
     border-bottom: 1px solid transparent;
 
 }
-
-
-
-
-
 
 /*-------------------------*/
 /* BUTTONS */
@@ -328,9 +330,6 @@ header {
 /****MEALS****/
 
 
-.section-property {
-
-}
 
 .section-meals {
     padding: 0;
